diesel_compile_tests/tests/fail/mysql_does_not_support_group_frame_clauses.stderr
error[E0277]: `Groups` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_does_not_support_group_frame_clauses.rs:21:22
     |
21   |         .load::<i64>(&mut connection)
     |          ----        ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql, NoGroupWindowFrameUnit>` is not implemented for `Groups`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `Groups` implements `QueryFragment<DB, IsoGroupWindowFrameUnit>`
               `Groups` implements `QueryFragment<DB>`
     = note: required for `Groups` to implement `QueryFragment<Mysql>`
     = note: 7 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>>` to implement `LoadQuery<'_, diesel::MysqlConnection, i64>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     For more information about this error, try `rustc --explain E0277`.
